tests/should_fail/vla.c
void f(const int n, int arr[n = 2]);

int main(void) {}
